--- a/BootstrapProject/b_index.html
+++ b/BootstrapProject/b_index.html
@@ -275,7 +275,7 @@
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-4">
+                    <div class="col-lg-4 col-md-6">
                         <h3>Оставьте мне сообщение</h3>
                     </div>
                 </div>
