--- a/BootstrapProject/b_index.html
+++ b/BootstrapProject/b_index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Андрей Браун - веб разработчик</title>
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/font-awesome.css">
@@ -67,7 +68,7 @@
                     <div class="col-xl-2 col-lg-2">
                         <div class="chapter_1"><h2>Обо мне</h2></div>
                     </div>
-                    <div class="col-xl-2 col-lg-3 col-md-4">
+                    <div class="col-xl-2 col-lg-3 col-md-4 text-center">
                         <img src="src/img/fotka.jpg">
                     </div>
                     <div class="col-8 pt-3">
@@ -89,28 +90,34 @@
                         <div class="chapter_2"><h2>Что я умею</h2></div>
                     </div>
                 </div>
-                <div class="row skills-item">
-                    <div class="col-12 d-flex justify-content-around align-items-center">
-                        <div class="item_1">
+                <div class="row justify-content-center skills-item">
+                    <div class="col-12 col-sm-6 col-md-3">
+                        <div class="item">
                             <img class="rounded mx-auto d-block img-fluid" src="src/img/laptop.png">
                             <h4 class="pb-1">Веб-дизайн</h4>
                             <span>Lorem ipsum dolor sit amet placerat<br>facilisis felis mi in tempus eleifend<br>pellentesque natoque etiam.</span>
                         </div>
-                        <div class="item_2">
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-3">
+                        <div class="item">
                             <img class="rounded mx-auto d-block img-fluid" src="src/img/sign.png">
                             <h4 class="pb-1">Разработка</h4>
                             <span>Lorem ipsum dolor sit amet placerat<br>facilisis mi in tempus eleifend<br>pellentesque.</span>
                         </div>
-                        <div class="item_3">
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-3">
+                        <div class="item">
                             <img class="rounded mx-auto d-block img-fluid" src="src/img/rocket.png">
                             <h4 class="pb-1">CEO-Оптимизация</h4>
                             <span>Lorem ipsum dolor sit amet placerat<br>facilisis felis mi in tempus eleifend<br>pellentesque natoque etiam.</span>
                         </div>
-                        <div class="item_4">
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-3">
+                        <div class="item">
                             <img class="rounded mx-auto d-block img-fluid" src="src/img/Gram.png">
                             <h4 class="pb-1">Маркетинг</h4>
                             <span>Lorem ipsum dolor sit amet placerat<br>facilisis felis mi in tempus eleifend<br>pellentesque natoque.</span>
-                        </div>   
+                        </div>
                     </div>
                 </div>
             </div>
@@ -145,46 +152,73 @@
                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit., sed do eiusmod tempor incididunt ut labore et dolore magna<br>aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span>
                    </div>
                </div>
-               <div class="row justify-content-center" id="price">
-                   <div class="col-lg-10 col-md-8 d-flex flex-column align-items-center price mb-5">
-                       <div class="case_price">
-                           <h2 class="pt-5 pb-5">Расчёт стоимости</h2>
-                           <form>
-                               <h3 class="pb-3">Тип сайта</h3>
-                               <select class="mb-4">
-                                   <option selected disabled>Выберите пункт...</option>
-                                   <option>1</option>
-                                   <option>2</option>
-                                   <option>3</option>
-                               </select>
-                               <h3 class="pb-3">Дизайн</h3>
-                               <select class="mb-4">
-                                   <option selected disabled>Выберите пункт...</option>
-                                   <option>1</option>
-                                   <option>2</option>
-                                   <option>3</option>
-                               </select>
-                               <h3 class="pb-3">Адаптивность</h3>
-                               <select class="mb-4">
-                                   <option selected disabled>Выберите пункт...</option>
-                                   <option>1</option>
-                                   <option>2</option>
-                                   <option>3</option>
-                               </select>
-                           </form>
-                           <div class="price_final">
-                               <p class="p_final1">Сроки <span>0</span></p>
-                               <p class="p_final2">Стоимость <span>0</span></p>
-                           </div>
+                       <div class="case_price mb-5">
+                          <div class="row justify-content-center">
+                              <div class="col-10 price">
+                                 <div class="row justify-content-center mt-5 mb-5">
+                                     <div class="col-lg-5 col-md-7">
+                                         <h2>Расчёт стоимости</h2>
+                                     </div>
+                                 </div>
+                                  <div class="row">
+                                      <div class="col-3">
+                                          <h3 class="pb-3">Тип сайта</h3>
+                                      </div>
+                                  </div>
+                                  <div class="row">
+                                      <div class="col-10 select">
+                                          <select class="mb-4">
+                                              <option selected disabled>Выберите пункт...</option>
+                                              <option>1</option>
+                                              <option>2</option>
+                                              <option>3</option>
+                                          </select>
+                                      </div>
+                                  </div>
+                                  <div class="row">
+                                      <div class="col-3">
+                                          <h3 class="pb-3">Дизайн</h3>
+                                      </div>
+                                  </div>
+                                  <div class="row">
+                                      <div class="col-10 select">
+                                          <select class="mb-4">
+                                              <option selected disabled>Выберите пункт...</option>
+                                              <option>1</option>
+                                              <option>2</option>
+                                              <option>3</option>
+                                          </select>
+                                      </div>
+                                  </div>
+                                  <div class="row">
+                                      <div class="col-3">
+                                          <h3 class="pb-3">Адаптивность</h3>
+                                      </div>
+                                  </div>
+                                  <div class="row">
+                                      <div class="col-10 select">
+                                          <select class="mb-5">
+                                              <option selected disabled>Выберите пункт...</option>
+                                              <option>1</option>
+                                              <option>2</option>
+                                              <option>3</option>
+                                          </select>
+                                      </div>
+                                  </div>
+                                      <div class="price_final">
+                                          <p class="p_final1">Сроки <span>0</span></p>
+                                          <p class="p_final2">Стоимость <span>0</span></p>
+                                      </div>
+                                      <div class="row justify-content-center">
+                                          <div class="col-2 pt-4">
+                                              <input class="price_input" type="submit" value="Оставить заявку">
+                                          </div>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+
                        </div>
-                       <div class="row">
-                           <div class="col-2 pt-4">
-                               <input class="price_input" type="submit" value="Оставить заявку">
-                           </div>
-                       </div>
-                   </div>
-               </div>
-            </div>
         </section>
         <section class="stat_bg">
             <div class="container">
