Загрузил обновленный проект на сервер

--- a/BootstrapProject/b_index.html
+++ b/BootstrapProject/b_index.html
@@ -125,7 +125,7 @@
         <section class="case" id="case">
            <div class="container">
                <div class="row justify-content-center case_head">
-                   <div class="col-2">
+                   <div class="col-md-2 col-sm-4">
                        <div class="chapter_3"><h2>Кейсы</h2></div>
                    </div>
                </div>
@@ -161,7 +161,7 @@
                                      </div>
                                  </div>
                                   <div class="row">
-                                      <div class="col-3">
+                                      <div class="col-md-3 col-sm-5">
                                           <h3 class="pb-3">Тип сайта</h3>
                                       </div>
                                   </div>
@@ -210,7 +210,7 @@
                                           <p class="p_final2">Стоимость <span>0</span></p>
                                       </div>
                                       <div class="row justify-content-center">
-                                          <div class="col-2 pt-4">
+                                          <div class="col-3 pt-4">
                                               <input class="price_input" type="submit" value="Оставить заявку">
                                           </div>
                                       </div>
@@ -258,12 +258,12 @@
         <section class="feedback mb-5 pb-4">
             <div class="container" id="feedback">
                 <div class="row justify-content-center">
-                    <div class="col-lg-2 col-md-4">
+                    <div class="col-lg-2 col-md-4 col-sm-6">
                         <div class="chapter_5"><h2>Отзывы</h2></div>
                     </div>
                     <div class="row justify-content-center">
                         <div class="col-2">
-                             <img class="rounded mx-auto d-block img-fluid pt-5 mt-3" src="src/img/FeedbackFace.png">
+                             <img class="rounded mx-auto d-block  pt-5 mt-3" src="src/img/FeedbackFace.png">
                         </div>
                     </div>
                     <div class="row justify-content-center">
