Загрузил на сервер обновленный проект

--- a/BootstrapProject/b_index.html
+++ b/BootstrapProject/b_index.html
@@ -205,12 +205,27 @@
                                           </select>
                                       </div>
                                   </div>
-                                      <div class="price_final">
-                                          <p class="p_final1">Сроки <span>0</span></p>
-                                          <p class="p_final2">Стоимость <span>0</span></p>
-                                      </div>
+                                    <div class="row justify-content-center">
+                                        <div class="col-12 price_border"></div>
+                                    </div>
+                                     <div class="row price_final justify-content-between pt-4">
+                                         <div class="col-1">
+                                             <p>Сроки</p>
+                                         </div>
+                                         <div class="col-1">
+                                             <span>0</span>
+                                         </div>
+                                     </div>
+                                     <div class="row price_final justify-content-between">
+                                         <div class="col-2">
+                                             <p>Стоимость</p>
+                                         </div>
+                                         <div class="col-1">
+                                             <span>0</span>
+                                         </div>
+                                     </div>
                                       <div class="row justify-content-center">
-                                          <div class="col-3 pt-4">
+                                          <div class="col-lg-2 col-md-4 col-sm-5 col-6 pt-2">
                                               <input class="price_input" type="submit" value="Оставить заявку">
                                           </div>
                                       </div>
