Загрузил на сервер обновленный проект

--- a/BootstrapProject/b_index.html
+++ b/BootstrapProject/b_index.html
@@ -112,7 +112,7 @@
                             <span>Lorem ipsum dolor sit amet placerat<br>facilisis felis mi in tempus eleifend<br>pellentesque natoque etiam.</span>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-md-3">
+                    <div class="col-12 col-sm-6 col-md-3 jj">
                         <div class="item">
                             <img class="rounded mx-auto d-block img-fluid" src="src/img/Gram.png">
                             <h4 class="pb-1">Маркетинг</h4>
@@ -161,7 +161,7 @@
                                      </div>
                                  </div>
                                   <div class="row">
-                                      <div class="col-md-3 col-sm-5">
+                                      <div class="col-md-3 col-sm-6">
                                           <h3 class="pb-3">Тип сайта</h3>
                                       </div>
                                   </div>
@@ -212,7 +212,7 @@
                                          <div class="col-1">
                                              <p>Сроки</p>
                                          </div>
-                                         <div class="col-1">
+                                         <div class="col-1 d-flex justify-content-end">
                                              <span>0</span>
                                          </div>
                                      </div>
@@ -220,7 +220,7 @@
                                          <div class="col-2">
                                              <p>Стоимость</p>
                                          </div>
-                                         <div class="col-1">
+                                         <div class="col-1 d-flex justify-content-end">
                                              <span>0</span>
                                          </div>
                                      </div>
@@ -232,7 +232,6 @@
                                   </div>
                               </div>
                           </div>
-
                        </div>
         </section>
         <section class="stat_bg">
@@ -242,32 +241,36 @@
                        <div class="chapter_4"><h2>Немного статистики</h2></div>
                    </div>
               </div>
-              <div class="row stat">
-                 <div class="col-lg-1 col-md-0"></div>
-                  <div class="col-lg-10 col-md-12 d-flex justify-content-between align-items-center">
-                      <div class="item_stat">
-                          <img class="rounded mx-auto d-block img-fluid pb-4" src="src/img/smile.png">
-                          <h4>120</h4>
-                          <p class="pt-4">Счастливых клиентов</p>
-                      </div>
-                      <div class="item_stat">
-                          <img class="rounded mx-auto d-block img-fluid pb-4" src="src/img/sign1.png">
-                          <h4>4,600</h4>
-                          <p class="pt-4">Часов работы</p>
-                      </div>
-                      <div class="item_stat">
-                          <img class="rounded mx-auto d-block img-fluid pb-4" src="src/img/gal.png">
-                          <h4>340</h4>
-                          <p class="pt-4">Проектов завершено</p>
-                      </div>
-                      <div class="item_stat">
-                          <img class="rounded mx-auto d-block img-fluid pb-4" src="src/img/cap.png">
-                          <h4>23</h4>
-                          <p class="pt-4">Наград получено</p>
-                      </div>
-                  </div>
-                  <div class="col-lg-1 col-md-0"></div>
-              </div>
+                <div class="row justify-content-center stat">
+                    <div class="col-12 col-sm-6 col-md-3">
+                        <div class="item_stat">
+                            <img class="rounded mx-auto d-block img-fluid pb-4" src="src/img/smile.png">
+                            <h4>120</h4>
+                            <p class="pt-4">Счастливых клиентов</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-3">
+                        <div class="item_stat">
+                            <img class="rounded mx-auto d-block img-fluid pb-4" src="src/img/sign1.png">
+                            <h4>4,600</h4>
+                            <p class="pt-4">Часов работы</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-3">
+                        <div class="item_stat">
+                            <img class="rounded mx-auto d-block img-fluid pb-4" src="src/img/gal.png">
+                            <h4>340</h4>
+                            <p class="pt-4">Проектов завершено</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-3 jj">
+                        <div class="item_stat">
+                            <img class="rounded mx-auto d-block img-fluid pb-4" src="src/img/cap.png">
+                            <h4>23</h4>
+                            <p class="pt-4">Наград получено</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="feedback mb-5 pb-4">
@@ -277,8 +280,8 @@
                         <div class="chapter_5"><h2>Отзывы</h2></div>
                     </div>
                     <div class="row justify-content-center">
-                        <div class="col-2">
-                             <img class="rounded mx-auto d-block  pt-5 mt-3" src="src/img/FeedbackFace.png">
+                        <div class="col-md-2 text-center">
+                             <img class="pt-5 mt-3" src="src/img/FeedbackFace.png">
                         </div>
                     </div>
                     <div class="row justify-content-center">
@@ -306,17 +309,21 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leo nec ornare diamcoccodo</p>
                     </div>
                 </div>
-                <div class="row justify-content-around item_contacts_container">
-                    <div class="col-lg-6 col-lg-8 d-flex justify-content-around align-items-center">
+                <div class="row justify-content-center item_contacts">
+                    <div class="col-12 col-sm-6 col-md-3">
                         <div class="item_contacts">
                             <img class="rounded mx-auto d-block img-fluid pb-3" src="src/img/Geo.png">
                             <h4>Санкт-Петербург
                             <br>Невский проспект 11</h4>
                         </div>
-                        <div class="item_contacts">
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-3">
+                         <div class="item_contacts">
                             <img class="rounded mx-auto d-block img-fluid pb-3" src="src/img/envelope.png">
                             <h4>info@companename.com</h4>
                         </div>
+                    </div>
+                    <div class="col-6 col-sm-6 col-md-3">
                         <div class="item_contacts">
                             <img class="rounded mx-auto d-block img-fluid pb-3" src="src/img/Phone.png">
                             <h4>+7 999 999-99-99</h4>
@@ -328,10 +335,10 @@
                         <h3>Оставьте мне сообщение</h3>
                     </div>
                 </div>
-                <div class="row justify-content-center form">
-                    <div class="col-8 d-flex justify-content-center">
+                <div class="row justify-content-center contacts_form">
+                    <div class="col-xl-8 col-lg-10 col-md-12 d-flex justify-content-center">
                         <form>
-                            <input class="enter" type="text" placeholder="Имя"> <input class="enter1" type="text" placeholder="Email">
+                            <input class="enter" type="text" placeholder="Имя"><input class="enter1" type="text" placeholder="Email">
                             <br>
                             <textarea placeholder="Сообщение"></textarea>
                         </form>
@@ -350,7 +357,7 @@
         <section class="end">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-4">
+                    <div class="col-xl-4 col-lg-6 col-md-8 col-sm-12">
                         <p>Copyright © 2021 Андрей Браун. Design by Web</p>
                     </div>
                 </div>
