--- a/BootstrapProject/b_index.html
+++ b/BootstrapProject/b_index.html
@@ -161,7 +161,7 @@
                                      </div>
                                  </div>
                                   <div class="row">
-                                      <div class="col-md-3 col-sm-6">
+                                      <div class="col-lg-3 col-md-6 col-sm-8">
                                           <h3 class="pb-3">Тип сайта</h3>
                                       </div>
                                   </div>
