--- a/BootstrapProject/b_index.html
+++ b/BootstrapProject/b_index.html
@@ -86,7 +86,7 @@
         <section class="skills" id="skills">
             <div class="container">
                 <div class="row d-flex justify-content-center">
-                    <div class="col-xl-2 col-lg-3">
+                    <div class="col-xl-2 col-lg-3 col-md-4 col-sm-5 col-9">
                         <div class="chapter_2"><h2>Что я умею</h2></div>
                     </div>
                 </div>
@@ -112,7 +112,7 @@
                             <span>Lorem ipsum dolor sit amet placerat<br>facilisis felis mi in tempus eleifend<br>pellentesque natoque etiam.</span>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-md-3 jj">
+                    <div class="col-12 col-sm-6 col-md-3">
                         <div class="item">
                             <img class="rounded mx-auto d-block img-fluid" src="src/img/Gram.png">
                             <h4 class="pb-1">Маркетинг</h4>
@@ -134,37 +134,39 @@
                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed Dapibus leo nec ornare diamcoccodo nibh ante facilisis.</p>
                    </div>
                </div>
-               <div class="row case_img">
+               <div class="row case_img mb-4">
                    <div class="col-12">
                        <img class="rounded mx-auto d-block img-fluid" src="src/img/fotka1.png">
                    </div>
                </div>
-               <div class="row case_ex">
-                   <div class="col-3 d-flex flex-column case_ex_span_1">
+               <div class="row case_ex case_button">
+                   <div class="col-xl-3 col-lg-2 case_ex_span_1">
                        <h4>CLIENT:</h4>
                        <span>Какая-то компания</span>
-                       <h4>WEBSITE:</h4>
-                       <span class="pt-2">https://www.somedomain.com</span>
-                       <input class="mt-4 case_input" type="button" value="Перейти на сайт">
+                       <h4 class="pb-2 cs">WEBSITE:</h4>
+                       <span>https://www.somedomain.com</span>
                    </div>
-                   <div class="col-9 d-flex flex-column case_ex_span_2">
+                   <div class="col-xl-9 col-lg-10 case_ex_span_2">
                        <h4>Название проекта</h4>
                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit., sed do eiusmod tempor incididunt ut labore et dolore magna<br>aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span>
                    </div>
+                   <div class="col-xxl-2 col-xl-3 col-lg-3 col-md-4 col-sm-5 col-7">
+                       <input class="mt-4 case_input" type="button" value="Перейти на сайт">
+                   </div>
                </div>
-                       <div class="case_price mb-5">
-                          <div class="row justify-content-center">
-                              <div class="col-10 price">
-                                 <div class="row justify-content-center mt-5 mb-5">
-                                     <div class="col-lg-5 col-md-7">
-                                         <h2>Расчёт стоимости</h2>
-                                     </div>
-                                 </div>
-                                  <div class="row">
-                                      <div class="col-lg-3 col-md-6 col-sm-8">
-                                          <h3 class="pb-3">Тип сайта</h3>
-                                      </div>
-                                  </div>
+                    <div class="case_price mb-5">
+                        <div class="row justify-content-center" id="price">
+                            <div class="col-10 price">
+                                <div class="row justify-content-center mt-5 mb-5">
+                                    <div class="col-lg-5 col-md-7">
+                                        <h2>Расчёт стоимости</h2>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-lg-3 col-md-6 col-sm-8">
+                                        <h3 class="pb-3">Тип сайта</h3>
+                                    </div>
+                                </div>
                                   <div class="row">
                                       <div class="col-10 select">
                                           <select class="mb-4">
@@ -225,7 +227,7 @@
                                          </div>
                                      </div>
                                       <div class="row justify-content-center">
-                                          <div class="col-lg-2 col-md-4 col-sm-5 col-6 pt-2">
+                                          <div class="col-lg-3 col-md-4 col-sm-5 col-8 pt-2 d-block">
                                               <input class="price_input" type="submit" value="Оставить заявку">
                                           </div>
                                       </div>
