Загрузил обновленный проект на сервер!

--- a/BootstrapProject/b_index.html
+++ b/BootstrapProject/b_index.html
@@ -367,5 +367,6 @@
         </section>
     </main>
     <script src="src/js/bootstrap.bundle.min.js"></script>
+    <script src="src/js/scripts.js"></script>
 </body>
 </html>
